--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+.resetBtn {
+  background: none;
+  border: none;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 #root {
   color: wheat;
   background: #4d4735;
@@ -17,9 +26,16 @@
   min-height: 100vh;
 }
 
+i, a {
+  color: #fff;
+}
+
 a {
   text-decoration: none;
-  color: #fff;
+}
+
+.modals {
+  font-family: Georgia, serif;
 }
 
 #btnPlay {
@@ -42,12 +58,23 @@ a {
 .btnToClick#replay {
   background: rgba(0, 0, 255, 0.5);
 }
+.btnToClick#replay:after {
+  background: rgba(255, 0, 0, 0.5);
+}
 .btnToClick#backToHome:after {
   background: grey;
 }
-.btnToClick:hover {
-  color: white;
-  transition: all 0.5s ease-in-out;
+.btnToClick#btnSeeScores {
+  background: #266041;
+}
+.btnToClick#btnSeeScores:after {
+  background: rgba(255, 0, 0, 0.5);
+}
+.btnToClick#saveScore {
+  background: rgb(172, 0, 0);
+}
+.btnToClick#saveScore:after {
+  background: rgba(236, 182, 0, 0.5);
 }
 .btnToClick:after {
   content: "";
@@ -64,6 +91,10 @@ a {
 .btnToClick:hover:after {
   transform: skewX(-45deg) scale(1, 1);
 }
+.btnToClick:hover {
+  color: white;
+  transition: all 0.5s ease-in-out;
+}
 
 #btnKeepDice {
   font-size: 14px;
@@ -73,10 +104,15 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 60px;
+  font-size: 4rem;
   min-width: 140px;
 }
 
+@media (max-width: 768px) {
+  .die {
+    font-size: 3rem;
+  }
+}
 #diceRow {
   row-gap: 20px;
 }
@@ -136,14 +172,38 @@ a {
   text-align: center;
 }
 
-#textEndFirstGame {
+.textEndFirstGame {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 40px;
 }
 
-.toHover:hover {
+.btnBackHome:hover {
   opacity: 0.7;
+}
+
+.modal-title {
+  font-size: 1.2em;
+}
+
+.bandeau {
+  border: 2px solid #fff;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 20px;
+  background-color: #266041;
+}
+
+.spinner-border {
+  width: 3rem;
+  height: 3rem;
+}
+
+@media (max-width: 768px) {
+  #theScoreDate {
+    font-size: 0.8em;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
