--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -12,6 +12,15 @@ $cursor-disabled: not-allowed;
   box-sizing: border-box;
 }
 
+.resetBtn {
+  background: none;
+  border: none;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 #root {
   color: $main-color;
   background: $bg-color;
@@ -66,6 +75,7 @@ a {
     background: grey;
   }
 
+  // Btn See other players scores
   &#btnSeeScores {
     background: #266041;
 
@@ -80,11 +90,6 @@ a {
     &:after {
       background: rgba(236, 182, 0, 0.5);
     }
-  }
-
-  &:hover {
-    color: white;
-    transition: all 0.5s ease-in-out;
   }
 
   &:after {
@@ -103,6 +108,11 @@ a {
   &:hover:after {
     transform: skewX(-45deg) scale(1, 1);
   }
+
+  &:hover {
+    color: white;
+    transition: all 0.5s ease-in-out;
+  }
 }
 
 #btnKeepDice {
@@ -113,8 +123,14 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 60px;
+  font-size: 4rem;
   min-width: 140px;
+}
+
+@media (max-width: 768px) {
+  .die {
+    font-size: 3rem;
+  }
 }
 
 #diceRow {
@@ -179,34 +195,31 @@ a {
   text-align: center;
 }
 
-#textEndFirstGame {
+.textEndFirstGame {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 40px;
 }
 
-.toHover:hover {
+.btnBackHome:hover {
   opacity: 0.7;
 }
 
-// Modal Save my score
+//#EndBtns .btnToClick{
+//  margin: 10px;
+//}
 
+// Modal Save my score
 .modal-title {
   font-size: 1.2em;
 }
 
 // Style page Scores
-
 .bandeau {
   border: 2px solid #fff;
-  border-radius: 50px;
   color: white;
   font-weight: bold;
-  display: grid;
-  grid-template-columns: 10% 25% 25% 40%;
-  justify-content: center;
-  align-items: center;
-  //height: 50px;
   margin-bottom: 20px;
   background-color: $btn-hover-bg-color;
 }
@@ -214,4 +227,10 @@ a {
 .spinner-border {
   width: 3rem;
   height: 3rem;
+}
+
+@media (max-width: 768px) {
+  #theScoreDate {
+    font-size: 0.8em; // 16px
+  }
 }
